# solo1-cli

./: .editorconfig  .envrc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README  README-parent.md  README.md  ci-requirements.txt  dev-requirements.txt  nitropy.py  pyproject.toml  solo-1.0.2-12-gc81bc9f.json  win_setup.py
.circleci/: config.yml
.github/workflows/: pythonpackage.yml
nitrokey/: client.py  dfu.py  hmac_secret.py  operations.py
nitrokey/cli/: __init__.py  fido2.py  program.py  start.py  update.py
nitrokey/start/: kdf_calc.py  rsa.py  threaded_log.py  upgrade_by_passwd.py  usb_strings.py
pynitrokey/: __init__.py  client.py  commands.py  dfu.py  helpers.py  hmac_secret.py  operations.py
pynitrokey/cli/: __init__.py  fido2.py  program.py  start.py  update.py
pynitrokey/start/: upgrade_by_passwd.py  usb_strings.py
removed/: __init__.py
solo/: VERSION  __init__.py  cli.py  client.py  commands.py  dfu.py  enums.py  exceptions.py  gnuk_token.py  helpers.py  hmac_secret.py  operations.py  smartcard.py  solotool.py
solo/cli/: __init__.py  _checks.py  _patches.py  device.py  fido2.py  genkey.py  key.py  monitor.py  program.py  start.py  update.py
solo/devices/: base.py  solo_v1.py  solo_v2.py
solo/fido2/: __init__.py  udp_backend.py
solo/start/: rsa.py  rsa_example.key  rsa_pub_key.py  threaded_log.py  upgrade_by_passwd.py  usb_strings.py
