

[tool.poetry]
name = "solo"
version = "0.0.27"
description = ""
authors = ["SoloKeys <hello@solokeys.com>"]
readme = "README.md"
homepage = "https://github.com/solokeys/solo-python"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = ">=3.6.0"
click = '>=7.0'
cryptography= '*'
ecdsa="*"
fido2 =">=0.8.1"
intelhex ="*"
pyserial ="*"
pyusb ="*"
requests ="*"
pyscard="*"
mboot2 = ">=0.3.5"



[tool.poetry.scripts]
solo = "solo.cli:solo_cli"
