[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "removed"
dist-name = "solo-python"
author = "SoloKeys"
author-email = "hello@solokeys.com"
home-page = "https://github.com/solokeys/solo1-cli"
requires-python = ">=3.6"
description-file = "README.md"
requires = [
    "solo1",
]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
